Bug 138711 - Frame disconnect after dragging down (comment 4)
Summary: Frame disconnect after dragging down (comment 4)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shape-Textbox
  Show dependency treegraph
 
Reported: 2020-12-07 11:30 UTC by Telesto
Modified: 2025-01-01 16:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (32.11 KB, application/vnd.oasis.opendocument.text)
2020-12-07 11:30 UTC, Telesto
Details
Example file (33.01 KB, application/vnd.oasis.opendocument.text)
2020-12-08 19:40 UTC, Telesto
Details
The original document in Writer after pulling the second frame a bit right (121.85 KB, image/png)
2021-02-08 11:59 UTC, NISZ LibreOffice Team
Details
Screencast (257.58 KB, video/mp4)
2021-02-08 14:43 UTC, Telesto
Details
Bibisect log for glitch in 4.3 (93.26 KB, text/plain)
2024-08-09 10:43 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-12-07 11:30:28 UTC
Description:
Text frame vanishes (becoming transparent) after dragging

Steps to Reproduce:
1. open the attached file (based on bug 138694 )
2. Scroll to page 2
3. Drag the left column frame to the right

Actual Results:
Disappears

Expected Results:
Not so


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 32fdb8eb3506bc8dcf013cc713fe8e5debceb940
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

frame without background but text present with
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2020-12-07 11:30:42 UTC
Created attachment 167899 [details]
Example file
Comment 2 Xisco Faulí 2020-12-07 16:24:10 UTC
the issue is reproducible at times. Please provide a simplifier sample document where the problem is always reproducible
Comment 3 Telesto 2020-12-08 19:40:01 UTC
Created attachment 167990 [details]
Example file

1. Go to page 2
2. Select the outer frame (NOT the inner white line)
3. Drag it down slightly above the bottom page margin (frame splits)
4. Drag frame a additional time
5. Press Undo -> Undo fails (requires step 4)
Comment 4 Telesto 2020-12-08 19:53:42 UTC
(In reply to Telesto from comment #3)
> Created attachment 167990 [details]
> Example file
> 
> 1. Go to page 2
> 2. Select the outer frame (NOT the inner white line)
> 3. Drag it down slightly above the bottom page margin (frame splits)
> 4. Drag frame a additional time
> 5. Press Undo -> Undo fails (requires step 4)

Not sure if comment 0 being the exactly the same.. Anyhow above (comment 3) are also in 

Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL

but less apparent (positions do different but not same extend) and undo actually working which big + compared to the current condition
Comment 5 Telesto 2020-12-08 19:56:28 UTC
The connection being perfect in
Versie: 4.2.0.4 
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Bit snappy to the left border (like snap window to corner effect), but frames a perfectly synchronized
Comment 6 Telesto 2020-12-08 20:03:12 UTC
Possibly a duplicate.. bibisect will tell (or people are already working on it)

Adding NISZ as this kind of their specialty currently
Comment 7 NISZ LibreOffice Team 2021-02-08 11:59:37 UTC
Created attachment 169583 [details]
The original document in Writer after pulling the second frame a bit right

No longer reproduced in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 44b914b1e2616ca8f70e896e653a46ca93610234
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL

But still present in slightly older bibisect-7.2:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 380ab85b6594a013f34f5e6ec69fb569336bbb48
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

I suspect the fix to bug #136516 solved this one.
Comment 8 Telesto 2021-02-08 13:13:44 UTC
@NISZ
Lazy me recycling this bug report. Comment 4 still broken
Comment 9 Xisco Faulí 2021-02-08 14:10:12 UTC
(In reply to Xisco Faulí from comment #2)
> the issue is reproducible at times. Please provide a simplifier sample
> document where the problem is always reproducible

Then putting to NEEDINFO until a simplified document is provided....
Comment 10 Telesto 2021-02-08 14:43:06 UTC
Created attachment 169589 [details]
Screencast

(In reply to Xisco Faulí from comment #9)
> (In reply to Xisco Faulí from comment #2)
> > the issue is reproducible at times. Please provide a simplifier sample
> > document where the problem is always reproducible
> 
> Then putting to NEEDINFO until a simplified document is provided....

Comment 4 is proper.. but here you go, a screencast
Comment 11 QA Administrators 2021-02-09 05:09:50 UTC Comment hidden (obsolete)
Comment 12 NISZ LibreOffice Team 2021-02-09 09:31:15 UTC
I see the split by moving the textbox one paragraph lower with attachment #167990 [details] in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 44b914b1e2616ca8f70e896e653a46ca93610234
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL

Not with the other attachment.
Comment 13 NISZ LibreOffice Team 2021-04-23 13:20:40 UTC
Still happens with:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: db1cf111666847ce5ce93d18ae5ae8c29a4c44d6
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Now in both example files the textboxes can be pulled by a few cm to the right and below to have their content and frame separated.

Also changing meta bug, these are odt files.
Comment 14 QA Administrators 2023-04-24 03:24:40 UTC Comment hidden (obsolete)
Comment 15 Buovjaga 2024-08-09 10:43:06 UTC
Created attachment 195780 [details]
Bibisect log for glitch in 4.3

4.3 had a glitch where the frames appeared as if cropped. Lots of skipped commits due to crashing upon startup in Linux 43max. This is the log of source commits with their messages.
Comment 16 Buovjaga 2024-08-09 11:00:19 UTC
The oldest of 44max repo still had the crop-like glitch, but later it had a state where the frame is not disconnected when dragging.

The crop glitch stopped with 0d602133d627c1837eb64895855c2a7ed0144de6
svx: fix VML export of rectangles imported from drawingML

The disconnection when dragging started with 9835a5823e0f559aabbc0e15ea126c82229c4bc7
sw textboxes: reimplement ODF import/export
Comment 17 Commit Notification 2024-10-16 07:54:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c8549fa3204802daec8597ba0f9f4f7ef23d5cd2

tdf#138711 sw textbox: capture fly when its draw object is captured

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Miklos Vajna 2024-10-16 07:59:36 UTC
I can't immediately reproduce the "drag down" case, but "draft left" is the same code and that reproduced nicely for me, now is meant to be fixed.
Comment 19 Commit Notification 2024-10-17 05:29:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/664b8252e705a2daec9f2a6bb30424e08fcdd3d2

tdf#138711 sw textbox: capture fly when its draw object is captured

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Piotr Osada 2024-11-19 19:37:45 UTC
(In reply to Miklos Vajna from comment #18)
> I can't immediately reproduce the "drag down" case, but "draft left" is the
> same code and that reproduced nicely for me, now is meant to be fixed.

Verified, there is no splitting of shape and textbox when dragging sideways by mouse or arrows in:

Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 21 maxbalt 2025-01-01 14:41:52 UTC Comment hidden (spam)